--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images/hong kong.jpg" alt=""></td>
+      <td><img src="hong kong.jpg" alt=""></td>
       <td><h1>Nicolas Mok</h1>
       <p><em>Future <strong>Web Developer❤</strong></em></p>
       <p>I’m 27 years old, fluent in Spanish, English and Cantonese with 3+ years experience in local and foreign restaurant customer services.
